# shdw

./: Cargo.toml  README.md  build.rs  flake.nix
src/: cli.rs  main.rs
tests/: tests.bats
