[package]
name = "shdw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
dirs = "4.0.0"
walkdir = "2.3.2"

[build-dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "*"
clap_mangen = "*"
